force-app/main/default/objects/Contract/fields/Active_Licensee_Details_Other__c.field-meta.xml
<CustomField>
    <fullName>Active_Licensee_Details_Other__c</fullName>
    <label>Active Licensee Details - Other</label>
    <length>50</length>
    <type>Text</type>
</CustomField>