force-app/main/default/objects/Contract/fields/Active_Licensee_fee__c.field-meta.xml
<CustomField>
    <fullName>Active_Licensee_fee__c</fullName>
    <label>Active Licensee fee</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>20%</fullName>
            </value>
            <value>
                <fullName>17.5%</fullName>
            </value>
            <value>
                <fullName>15%</fullName>
            </value>
            <value>
                <fullName>10%</fullName>
            </value>
            <value>
                <fullName>Flat Fee ($ Amount), see Active Licensee Details</fullName>
            </value>
            <value>
                <fullName>Other, see Active Licensee Details</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>