force-app/main/default/objects/Contract/fields/Active_Licensee_optional_renewal_details__c.field-meta.xml
<CustomField>
    <fullName>Active_Licensee_optional_renewal_details__c</fullName>
    <label>Active Licensee optional renewal details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>