force-app/main/default/objects/Contract/fields/Active_Licensee_renewal_type__c.field-meta.xml
<CustomField>
    <fullName>Active_Licensee_renewal_type__c</fullName>
    <label>Active Licensee renewal type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fixed term with no further obligation</fullName>
            </value>
            <value>
                <fullName>Automatic renewal</fullName>
            </value>
            <value>
                <fullName>Optional renewal</fullName>
            </value>
            <value>
                <fullName>Other, see Active Licensee optional renewal details</fullName>
            </value>
            <value>
                <fullName>Opt-In Renewal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>