force-app/main/default/objects/Contract/fields/Active_Licensee_Status__c.field-meta.xml
<CustomField>
    <fullName>Active_Licensee_Status__c</fullName>
    <label>Active Licensee Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Not Active</fullName>
            </value>
            <value>
                <fullName>Not on Active Structure</fullName>
            </value>
            <value>
                <fullName>Legacy License (Never Active)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>