force-app/main/default/objects/Contract/fields/Active_Licensee_termination_date__c.field-meta.xml
<CustomField>
    <fullName>Active_Licensee_termination_date__c</fullName>
    <label>Active Licensee termination date</label>
    <type>Date</type>
</CustomField>