force-app/main/default/objects/Contract/fields/Additional_insurance_requirements__c.field-meta.xml
<CustomField>
    <fullName>Additional_insurance_requirements__c</fullName>
    <label>Additional insurance requirements</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>