force-app/main/default/objects/Contract/fields/Additional_Invoice_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Additional_Invoice_Requirements__c</fullName>
    <label>Additional Invoice Requirements</label>
    <type>TextArea</type>
</CustomField>