force-app/main/default/objects/Contract/fields/Additional_Onsite_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Additional_Onsite_Requirements__c</fullName>
    <label>Additional Onsite Requirements</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>