force-app/main/default/objects/Contract/fields/ADKAR_audiobook__c.field-meta.xml
<CustomField>
    <fullName>ADKAR_audiobook__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ADKAR audiobook</label>
    <type>Checkbox</type>
</CustomField>