force-app/main/default/objects/Contract/fields/ADKAR_book__c.field-meta.xml
<CustomField>
    <fullName>ADKAR_book__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ADKAR book</label>
    <type>Checkbox</type>
</CustomField>