force-app/main/default/objects/Contract/fields/ADKAR_eLearning__c.field-meta.xml
<CustomField>
    <fullName>ADKAR_eLearning__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ADKAR eLearning</label>
    <type>Checkbox</type>
</CustomField>