force-app/main/default/objects/Contract/fields/Affiliates_may_make_use_of_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Affiliates_may_make_use_of_Agreement__c</fullName>
    <label>Affiliates may make use of Agreement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
                <label>Other - see Affiliates - Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>