force-app/main/default/objects/Contract/fields/Affiliates_Other__c.field-meta.xml
<CustomField>
    <fullName>Affiliates_Other__c</fullName>
    <label>Affiliates - Other</label>
    <type>TextArea</type>
</CustomField>