force-app/main/default/objects/Contract/fields/Air_Travel_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Air_Travel_Requirements__c</fullName>
    <label>Air Travel Requirements</label>
    <length>255</length>
    <type>Text</type>
</CustomField>