force-app/main/default/objects/Contract/fields/Alternative_notice__c.field-meta.xml
<CustomField>
    <fullName>Alternative_notice__c</fullName>
    <label>Alternative notice</label>
    <length>255</length>
    <type>Text</type>
</CustomField>