force-app/main/default/objects/Contract/fields/Amendment_required_for_License_Update__c.field-meta.xml
<CustomField>
    <fullName>Amendment_required_for_License_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Amendment required for License Update</label>
    <type>Checkbox</type>
</CustomField>