force-app/main/default/objects/Contract/fields/Amount_to_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Amount_to_Invoice__c</fullName>
    <label>Amount to Invoice</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full Initial License Fee Amount</fullName>
            </value>
            <value>
                <fullName>Other, see Amount to Invoice - Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>