force-app/main/default/objects/Contract/fields/Amount_to_Invoice_Other__c.field-meta.xml
<CustomField>
    <fullName>Amount_to_Invoice_Other__c</fullName>
    <label>Amount to Invoice - Other</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>