force-app/main/default/objects/Contract/fields/Anti_kickback_provisions__c.field-meta.xml
<CustomField>
    <fullName>Anti_kickback_provisions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Anti-kickback provisions</label>
    <type>Checkbox</type>
</CustomField>