force-app/main/default/objects/Contract/fields/APXT_Redlining__Contract_Family_Parent__c.field-meta.xml
<CustomField>
    <fullName>APXT_Redlining__Contract_Family_Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Parent contract, with respect to the contract family.</description>
    <inlineHelpText>Parent contract, with respect to the contract family.</inlineHelpText>
    <label>Parent Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Contract Family Children</relationshipLabel>
    <relationshipName>Children</relationshipName>
    <type>Lookup</type>
</CustomField>