force-app/main/default/objects/Contract/fields/APXT_Redlining__Contract_Family_Root__c.field-meta.xml
<CustomField>
    <fullName>APXT_Redlining__Contract_Family_Root__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Root contract, with respect to the contract family.</description>
    <inlineHelpText>Root contract, with respect to the contract family.</inlineHelpText>
    <label>Root Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Contract Family Root Children</relationshipLabel>
    <relationshipName>RootChildren</relationshipName>
    <type>Lookup</type>
</CustomField>