force-app/main/default/objects/Contract/fields/APXT_Redlining__Primary_Document__c.field-meta.xml
<CustomField>
    <fullName>APXT_Redlining__Primary_Document__c</fullName>
    <label>Primary Document Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>