force-app/main/default/objects/Contract/fields/APXT_Redlining__Primary_Document_Title__c.field-meta.xml
<CustomField>
    <fullName>APXT_Redlining__Primary_Document_Title__c</fullName>
    <label>Primary Document</label>
    <length>255</length>
    <type>Text</type>
</CustomField>