force-app/main/default/objects/Contract/fields/Assignment__c.field-meta.xml
<CustomField>
    <fullName>Assignment__c</fullName>
    <inlineHelpText>If &quot;Company,&quot; explain modification.</inlineHelpText>
    <label>Assignment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Prosci</fullName>
            </value>
            <value>
                <fullName>Neither party may assign</fullName>
            </value>
            <value>
                <fullName>Both parties may assign in any event</fullName>
            </value>
            <value>
                <fullName>Prosci may assign in any event</fullName>
            </value>
            <value>
                <fullName>Company may assign in any event</fullName>
            </value>
            <value>
                <fullName>Both parties may assign in case of sale, transfer, etc.</fullName>
            </value>
            <value>
                <fullName>Prosci may assign in case of sale, transfer, etc.</fullName>
            </value>
            <value>
                <fullName>Company may assign in case of sale, transfer, etc.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>