force-app/main/default/objects/Contract/fields/Audit_Rights_and_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Audit_Rights_and_Requirements__c</fullName>
    <label>Audit Rights and Requirements</label>
    <length>255</length>
    <type>Text</type>
</CustomField>