force-app/main/default/objects/Contract/fields/Auto_Rental_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Auto_Rental_Requirements__c</fullName>
    <label>Auto Rental Requirements</label>
    <length>255</length>
    <type>Text</type>
</CustomField>