force-app/main/default/objects/Contract/fields/Automatic_renewal_periods__c.field-meta.xml
<CustomField>
    <fullName>Automatic_renewal_periods__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Automatic renewal periods</label>
    <type>Checkbox</type>
</CustomField>