force-app/main/default/objects/Contract/fields/Background_Check__c.field-meta.xml
<CustomField>
    <fullName>Background_Check__c</fullName>
    <label>Background Check Required</label>
    <length>250</length>
    <type>Text</type>
</CustomField>