force-app/main/default/objects/Contract/fields/Badge_Access_Required__c.field-meta.xml
<CustomField>
    <fullName>Badge_Access_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Badge Access Required</label>
    <type>Checkbox</type>
</CustomField>