force-app/main/default/objects/Contract/fields/Best_Practices_in_CM_report__c.field-meta.xml
<CustomField>
    <fullName>Best_Practices_in_CM_report__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Best Practices in CM report</label>
    <type>Checkbox</type>
</CustomField>