force-app/main/default/objects/Contract/fields/Can_we_use_Client_s_name_publicly__c.field-meta.xml
<CustomField>
    <fullName>Can_we_use_Client_s_name_publicly__c</fullName>
    <inlineHelpText>If the selection is ‘Cannot use Client’s name publicly’, please contact Legal if we wish to request permission to use name publicly</inlineHelpText>
    <label>Can we use Client&apos;s name publicly?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Able to use client&apos;s name</fullName>
            </value>
            <value>
                <fullName>Cannot use client&apos;s name</fullName>
            </value>
            <value>
                <fullName>No restriction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>