force-app/main/default/objects/Contract/fields/can_we_use_clients_name_publicly__c.field-meta.xml
<CustomField>
    <fullName>can_we_use_clients_name_publicly__c</fullName>
    <inlineHelpText>If the selection is ‘Cannot use Client’s name publicly’, please contact Legal if we wish to request permission to use name publicly</inlineHelpText>
    <label>Can we use Client&apos;s name publicly?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Able to use client’s name publicly</fullName>
            </value>
            <value>
                <fullName>Cannot use client’s name publicly</fullName>
            </value>
            <value>
                <fullName>No Restriction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>