force-app/main/default/objects/Contract/fields/Can_we_use_PO_Number_on_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Can_we_use_PO_Number_on_Invoice__c</fullName>
    <inlineHelpText>If &quot;No,&quot; PO prevails over agreement; see Legal.</inlineHelpText>
    <label>Can we use PO Number on Invoice?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>