force-app/main/default/objects/Contract/fields/Can_we_use_subcontractors__c.field-meta.xml
<CustomField>
    <fullName>Can_we_use_subcontractors__c</fullName>
    <label>Can we use subcontractors?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Permitted without consent</fullName>
                <label>Yes, permission not required</label>
            </value>
            <value>
                <fullName>Permitted with prior consent (from client)</fullName>
                <label>Yes, with Company&apos;s permission</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>