force-app/main/default/objects/Contract/fields/Cancellation_policy__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_policy__c</fullName>
    <inlineHelpText>If &quot;Prosci,&quot; standard Cancellation Policy applies.  If &quot;Company,&quot; modified cancellation.  Reference the Agreement.</inlineHelpText>
    <label>Cancellation policy</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Non-Standard, see Other</fullName>
                <label>Non-Standard - see Cancellation Policy - Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>