force-app/main/default/objects/Contract/fields/Cancellation_policy_details__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_policy_details__c</fullName>
    <label>Cancellation policy details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>