force-app/main/default/objects/Contract/fields/Cancellation_policy_location__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_policy_location__c</fullName>
    <label>Cancellation policy location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agreement</fullName>
            </value>
            <value>
                <fullName>SOW</fullName>
            </value>
            <value>
                <fullName>Other, see below</fullName>
                <label>Other - see General Contract Details - Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>