force-app/main/default/objects/Contract/fields/Cancellation_Policy_Other__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Policy_Other__c</fullName>
    <label>Cancellation policy - Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>