force-app/main/default/objects/Contract/fields/Change_Management_Pilot_Professional__c.field-meta.xml
<CustomField>
    <fullName>Change_Management_Pilot_Professional__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Change Management Pilot Professional</label>
    <type>Checkbox</type>
</CustomField>