force-app/main/default/objects/Contract/fields/Change_Management_Toolkit__c.field-meta.xml
<CustomField>
    <fullName>Change_Management_Toolkit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Change Management Toolkit</label>
    <type>Checkbox</type>
</CustomField>