force-app/main/default/objects/Contract/fields/Change_Mgt_people_side_of_change_book__c.field-meta.xml
<CustomField>
    <fullName>Change_Mgt_people_side_of_change_book__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Change Mgt: people side of change book</label>
    <type>Checkbox</type>
</CustomField>