force-app/main/default/objects/Contract/fields/Change_Portfolio_Toolkit__c.field-meta.xml
<CustomField>
    <fullName>Change_Portfolio_Toolkit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Change Portfolio Toolkit</label>
    <type>Checkbox</type>
</CustomField>