force-app/main/default/objects/Contract/fields/Child_labor__c.field-meta.xml
<CustomField>
    <fullName>Child_labor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Child labor</label>
    <type>Checkbox</type>
</CustomField>