force-app/main/default/objects/Contract/fields/Choice_of_Law__c.field-meta.xml
<CustomField>
    <fullName>Choice_of_Law__c</fullName>
    <label>Choice of Law</label>
    <length>255</length>
    <type>Text</type>
</CustomField>