force-app/main/default/objects/Contract/fields/Choice_of_Law_Score__c.field-meta.xml
<CustomField>
    <fullName>Choice_of_Law_Score__c</fullName>
    <label>Choice of Law Score</label>
    <length>100</length>
    <type>Text</type>
</CustomField>