force-app/main/default/objects/Contract/fields/ci_breach_noticifation_requirement__c.field-meta.xml
<CustomField>
    <fullName>ci_breach_noticifation_requirement__c</fullName>
    <label>CI Breach - Notification Requirement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>