force-app/main/default/objects/Contract/fields/CM_Cert_Pgm_a_pictorial_book__c.field-meta.xml
<CustomField>
    <fullName>CM_Cert_Pgm_a_pictorial_book__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CM Cert Pgm, a pictorial book</label>
    <type>Checkbox</type>
</CustomField>