force-app/main/default/objects/Contract/fields/CM_Coaching_manager_Course__c.field-meta.xml
<CustomField>
    <fullName>CM_Coaching_manager_Course__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CM Coaching/Manager Course</label>
    <type>Checkbox</type>
</CustomField>