force-app/main/default/objects/Contract/fields/CM_Guide_for_Mgrs_Toolkit__c.field-meta.xml
<CustomField>
    <fullName>CM_Guide_for_Mgrs_Toolkit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CM Guide for Mgrs Toolkit</label>
    <type>Checkbox</type>
</CustomField>