force-app/main/default/objects/Contract/fields/CM_Orientation_Employees_Course__c.field-meta.xml
<CustomField>
    <fullName>CM_Orientation_Employees_Course__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CM Orientation Employees Course</label>
    <type>Checkbox</type>
</CustomField>