force-app/main/default/objects/Contract/fields/CM_Practitioner_Course__c.field-meta.xml
<CustomField>
    <fullName>CM_Practitioner_Course__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CM Practitioner Course</label>
    <type>Checkbox</type>
</CustomField>