force-app/main/default/objects/Contract/fields/CM_Research_Library__c.field-meta.xml
<CustomField>
    <fullName>CM_Research_Library__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CM Research Library</label>
    <type>Checkbox</type>
</CustomField>