force-app/main/default/objects/Contract/fields/CM_Sponsor_Course__c.field-meta.xml
<CustomField>
    <fullName>CM_Sponsor_Course__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CM Sponsor Course</label>
    <type>Checkbox</type>
</CustomField>