force-app/main/default/objects/Contract/fields/Code_of_conduct_requirements__c.field-meta.xml
<CustomField>
    <fullName>Code_of_conduct_requirements__c</fullName>
    <label>Code of conduct requirements</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>