force-app/main/default/objects/Contract/fields/Company_Intellectual_Property__c.field-meta.xml
<CustomField>
    <fullName>Company_Intellectual_Property__c</fullName>
    <inlineHelpText>Prosci is agreeing to these obligations with regard to client IP.</inlineHelpText>
    <label>Company Intellectual Property</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>