force-app/main/default/objects/Contract/fields/Company_Right_to_Audit__c.field-meta.xml
<CustomField>
    <fullName>Company_Right_to_Audit__c</fullName>
    <label>Company Right to Audit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>yes_see_audit_rights_and_requirements</fullName>
                <label>Yes, see Audit Rights and Requirements</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>