force-app/main/default/objects/Contract/fields/Company_Right_to_Audit_Books_and_Records__c.field-meta.xml
<CustomField>
    <fullName>Company_Right_to_Audit_Books_and_Records__c</fullName>
    <label>Company Right to Audit Books and Records</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>