force-app/main/default/objects/Contract/fields/Confidentality_Trademark_restriction__c.field-meta.xml
<CustomField>
    <fullName>Confidentality_Trademark_restriction__c</fullName>
    <label>Confidentality Trademark restriction</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Prohibited</fullName>
            </value>
            <value>
                <fullName>With permission</fullName>
            </value>
            <value>
                <fullName>No restriction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>