force-app/main/default/objects/Contract/fields/Confidential_Information_Details_Other__c.field-meta.xml
<CustomField>
    <fullName>Confidential_Information_Details_Other__c</fullName>
    <label>Confidential Information Details – Other</label>
    <type>TextArea</type>
</CustomField>