force-app/main/default/objects/Contract/fields/Confidentiality_Agreement_NDA__c.field-meta.xml
<CustomField>
    <fullName>Confidentiality_Agreement_NDA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confidentiality Agreement/NDA</label>
    <type>Checkbox</type>
</CustomField>