force-app/main/default/objects/Contract/fields/Confidentiality_Obligations_under_Lic__c.field-meta.xml
<CustomField>
    <fullName>Confidentiality_Obligations_under_Lic__c</fullName>
    <inlineHelpText>If this is &quot;No&quot;, Prosci does not have any confidentiality obligtions under this License.</inlineHelpText>
    <label>Confidentiality Obligations under Lic</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>