force-app/main/default/objects/Contract/fields/Confidentiality_source__c.field-meta.xml
<CustomField>
    <fullName>Confidentiality_source__c</fullName>
    <label>Confidentiality source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Professional_Services_Agreement</fullName>
                <label>Professional Services Agreement</label>
            </value>
            <value>
                <fullName>Non_Disclosure_Agreement</fullName>
                <label>Non Disclosure Agreement</label>
            </value>
            <value>
                <fullName>License</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>